--- a/Cerebra/styles/base.css
+++ b/Cerebra/styles/base.css
@@ -7,8 +7,13 @@
 
 a {
     text-decoration: none;
+    color: black;
 }
 
 li {
     list-style-type: none;
+}
+
+hr {
+    border: 1px solid black;
 }
